# uexinfo

./: .gitignore  CLAUDE.md  README.md  debug_help.py  pyproject.toml  requirements.txt  test_completion.py  test_full_flow_debug.py  test_help_dispatch.py  test_main_flow.py  test_repl_help.py
.claude/: .nfs000000000082408800000003  .nfs000000000082521600000004  settings.local.json
docs/: AllianceAid_Guide.md  DUAL_MODE_OVERLAY.md  INFO_DIAG.md  OVERLAY_GRAPHIQUE_PLAN.md  TEXTUAL_MIGRATION.md  TODO_zol.md  api-sctrade.md  api-uex.md  architecture.md  commands.md  etudes_missions.md  grids_ships_study.md  missions_AA.md  scan-editor.md  scan-ocr.md
extprg/: applog1_SC-DataRunner.txt  applog2_SC-DataRunner.txt
extprg/SC-Datarunner-UEX/: app.log.2026-02-28_02  app.log.2026-02-28_11  app.log.2026-02-28_12  app.log.2026-02-28_17  app.log.2026-02-28_19  app.log.2026-03-01_01  app.log.2026-03-01_16  app.log.2026-03-01_18  app.log.2026-03-02_21  app.log.2026-03-04_21  app.log.2026-03-04_23  app.log.2026-03-05_23  app.log.2026-03-06_01  app.log.2026-03-06_10  app.log.2026-03-06_11  app.log.2026-03-06_15  app.log.2026-03-06_17  app.log.2026-03-08_16  app.log.2026-03-08_19  app.log.2026-03-09_21  app.log.2026-03-09_22
scripts/: generate_locations.py
uexinfo/: __main__.py  app.py  overlay.py
uexinfo/api/: sctrade_client.py  uex_client.py
uexinfo/cache/: manager.py  mission_manager.py  mission_scan.py  models.py  price_cache.py  scan_prices.py  screenshot_db.py  voyage_manager.py
uexinfo/cli/: __init__.py  completer.py  history.py  main.py  parser.py  runner.py  selector.py
uexinfo/config/: settings.py
uexinfo/data/: cargo_grids.py  transport_network.json
uexinfo/display/: colors.py  formatter.py
uexinfo/location/: index.py
uexinfo/models/: mission.py  mission_result.py  player.py  scan_result.py  (+2 more)
(+40 files in other folders)
