[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "uexinfo"
version = "0.1.0"
description = "CLI interactif Star Citizen — UEX Corp 2.0 API + sc-trade.tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "tomli-w>=1.0",
    "appdirs>=1.4",
    "Pillow>=10.0",
    "pytesseract>=0.3",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]

[project.scripts]
uexinfo = "uexinfo.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uexinfo*"]
